# src/router.js
@@ -5,6 +5,7 @@ const swaggerFile = require('./swagger_output.json');
 const router = new express.Router();
 
 const UserController = require('./controllers/UserController');
+const OfficeController = require('./controllers/OfficeController');
 
 router.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
@@ -20,5 +21,12 @@ router.get('/users/', UserController.getAll);
 router.get('/users/:_id', UserController.getById);
 router.put('/users/:_id', UserController.update);
 router.post('/register', UserController.insert);
+
+// Office
+router.get('/office/', OfficeController.getAll);
+router.get('/office/:_id', OfficeController.getById);
+router.put('/office/:_id', OfficeController.update);
+router.post('/office', OfficeController.insert);
+router.delete('/office/:_id', OfficeController.delete);
 
 module.exports = router;
